--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="#about"> 
-                    <img src="IMG_20240120_131458.jpg" alt="Profile Picture" class="profile-img rounded-circle">
+                    <img src="bb8fcd62-d16e-4069-a558-62dc4b79285b.jpg" alt="Profile Picture" class="profile-img rounded-circle">
                     <span class="name-header">Jade Anthony Patalinghug</span>
                 </a>
                
