--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="style.css"> 
+
+    <style>
+        .profile-img-small {
+            width: 100px;  /* Set the desired width */
+            height: 100px; /* Set the desired height */
+        }
+    </style>
+
+    
 </head>
 <body id="page-top">
     <!-- Navigation-->
@@ -23,7 +32,7 @@
         <div class="container">
             <div class="navbar-brand">
                 <a href="#about"> 
-                    <img src="bb8fcd62-d16e-4069-a558-62dc4b79285b.jpg" alt="Profile Picture" class="profile-img rounded-circle">
+                    <img src="bb8fcd62-d16e-4069-a558-62dc4b79285b.jpg" alt="Profile Picture" class="profile-img profile-img-small rounded-circle">
                     <span class="name-header">Jade Anthony Patalinghug</span>
                 </a>
                
