--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Embedding a PDF file -->
-                        <embed src="https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview" type="application/pdf" width="100%" height="500">
+                        <button type ="button" onclick= "location.href='https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview'">
                     </td>
                 </tr>
             </table>
