--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Google Sheets embed code -->
-                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=1448099452&amp;single=true&amp;widget=true&amp" width="100%" height="500"></iframe>
+                        <button type="button" class="btn btn-secondary onclick= "location.href='https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=1448099452&amp;single=true&amp;widget=true&amp'">Daily Attendance Summary</button>
                     </td>
                 </tr>
 
@@ -220,7 +220,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Embedding a PDF file -->
-                        <button type ="button" onclick= "location.href='https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview'">
+                        <button type="button" class="btn btn-secondary onclick= "location.href='https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview'">Accomplishment Report</button>
                     </td>
                 </tr>
             </table>
