--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Google Sheets embed code -->
-                        <button type="button" class="btn btn-secondary onclick= "location.href='https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=1448099452&amp;single=true&amp;widget=true&amp'">Daily Attendance Summary</button>
-                    </td>
+                       <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=1448099452&amp;single=true&amp;widget=true&amp" class="btn btn-info" role="button">Daily Attendance Summary</a>
                 </tr>
 
                <tr>
@@ -220,7 +219,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Embedding a PDF file -->
-                        <button type="button" class="btn btn-secondary onclick= "location.href='https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview'">Accomplishment Report</button>
+                        <a href="https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview" class="btn btn-info" role="button">Accomplishment Report</a>
                     </td>
                 </tr>
             </table>
