--- a/index.html
+++ b/index.html
@@ -205,21 +205,28 @@
                 <tr>
                     <td height="100" align="center" valign="middle" colspan="2">
                         <font face="Verdana" size="5" color="black">
-                            Daily Attendance Summary
                         </font>
                         <hr color="black" width="90">
                         <!-- Google Sheets embed code -->
-                       <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSwUMDTzqUgDh4YRm8DlhDBSVSQWhPYeN-oDeVcixA6LUz3-Lmuw6Z2mGptgWoPCgmxrJQ8NcdV6udV/pubhtml?gid=1448099452&amp;single=true&amp;widget=true&amp" class="btn btn-info" role="button">Daily Attendance Summary</a>
+                       <a href="https://docs.google.com/spreadsheets/d/1CkhNdOJkDDXPp9EWHVg33puKDy8B5VibnE7zEeKRuSA/edit?fbclid=IwZXh0bgNhZW0CMTAAAR2nJ9EXHuKOOocivrIrv_813IoESyKWG_w8G2H4daaKnsDZ4X_BwWZUp_w_aem_WGQhCuJiWZw-StBt8DYMCg&gid=1448099452#gid=1448099452" class="btn btn-secondary" role="button">Daily Attendance Summary</a>
                 </tr>
 
                <tr>
                     <td height="180" align="center" valign="middle" colspan="2">
                         <font face="Verdana" size="5" color="black">
-                            Accomplishment Report
                         </font>
                         <hr color="black" width="90">
                         <!-- Embedding a PDF file -->
-                        <a href="https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview" class="btn btn-info" role="button">Accomplishment Report</a>
+                        <a href="https://docs.google.com/document/d/1gPnStAkFpZOKfAXTIfOX91jN7X86aMkd/preview" class="btn btn-secondary" role="button">Accomplishment Report</a>
+                    </td>
+                </tr>
+            <tr>
+                    <td height="180" align="center" valign="middle" colspan="2">
+                        <font face="Verdana" size="5" color="black">
+                        </font>
+                        <hr color="black" width="90">
+                        <!-- Embedding a PDF file -->
+                        <a href="https://github.com/patalinghugjade/portfolio072024/blob/main/CE-591-404_PATALINGHUG-JADE-ANTHONY_Resume%20(2).pdf" class="btn btn-secondary" role="button">Resume</a>
                     </td>
                 </tr>
             </table>
