--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </font>
                         <hr color="black" width="90">
                         <!-- Embedding a PDF file -->
-                        <a href="https://github.com/patalinghugjade/portfolio072024/blob/main/CE-591-404_PATALINGHUG-JADE-ANTHONY_Resume%20(2).pdf" class="btn btn-secondary" role="button">Resume</a>
+                        <a href="https://drive.google.com/file/d/1AJPmS6Q6zsYy-NuV4lInBoxmKV1QZRKb/view" class="btn btn-secondary" role="button">Resume</a>
                     </td>
                 </tr>
             </table>
